--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
+
 .container{
     width:80%;
     padding:1rem;
@@ -8,15 +12,32 @@
     text-decoration: underline;
     text-decoration-color:#17B978;
     color:#071A52;
-    font-size:3rem;
+    font-size:3.5rem;
+    font-family:'Montserrat',sans-serif;
+    font-weight:900;
+}
+
+.subheading{
+    font-family:'Montserrat',sans-serif;
+    text-align:center;
+}
+
+.topic-description{
+    font-family:'Montserrat',sans-serif;
 }
 
 .flex-grid-container{
-    display:flex;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 10vw;
 }
 .flex-grid{
-    flex:3;
-    flex-wrap:wrap;
+    flex: 1 0 30%;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin: 2rem;
+    border:solid;
 }
 
 .flex-grid .col{
