--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,12 +1,12 @@
 .nav {
     height: 50px;
     padding: 10px;
-    background: #000;
+    background: #071A52;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top:2rem;
+    margin-top:4rem;
   }
   
   .nav ul {
